--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,17 +1,20 @@
-# PHP image use karo
+# PHP 8.2 aur Apache install karo
 FROM php:8.2-apache
 
-# Required modules install karo (CodeIgniter ke liye)
+# Required extensions install karo (mysqli, pdo_mysql)
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 
-# Public folder ko expose karo (CodeIgniter ke liye)
+# Apache ke liye mod_rewrite enable karo (CodeIgniter ke liye zaroori hai)
+RUN a2enmod rewrite
+
+# CodeIgniter ka "public" folder as DocumentRoot set karo
 WORKDIR /var/www/html
 
-# Local files ko Docker container me copy karo
+# Sabhi files Docker container me copy karo
 COPY . /var/www/html
 
-# Apache enable karo
+# Apache expose karo (80 port)
 EXPOSE 80
 
-# Apache start command
+# Apache service start karo
 CMD ["apache2-foreground"]
